--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,12 +1,30 @@
-.main {
+.entirePage {
+  background-color: rgb(158, 158, 158);
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
 
+.infoSquare {
+  display: flex;
+  flex-direction: row;
+  border-radius: 20px;
+  margin: 0 2rem;
+  width: 100%;
+  height: 90%;
+  background-color: rgb(255, 255, 255);
+}
+
+.partRight {
+  margin-left: auto;
+  background-color: rgb(216, 216, 216);
+  height: 100%;
+  width: 70%;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+/*
 .description {
   display: inherit;
   justify-content: inherit;
@@ -108,7 +126,7 @@
   position: relative;
 }
 /* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
+/* @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
     border: 1px solid rgba(var(--card-border-rgb), 0.15);
@@ -123,10 +141,10 @@
   .card:hover span {
     transform: none;
   }
-}
+} */
 
 /* Mobile */
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .content {
     padding: 4rem;
   }
@@ -200,10 +218,10 @@
     );
     z-index: 1;
   }
-}
+} */
 
 /* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
+/* @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
   }
@@ -226,4 +244,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
